--- a/index.html
+++ b/index.html
@@ -689,34 +689,35 @@
         <div class="features__wrapper">
           <div class="section-header">
             <div class="section-header__title section-header__title--features">
-              I try to make sure..
+              My Core Principles
             </div>
             <div class="section-header__subtitle">
-              I try my best to fulfill these points for the greatest possible
+              I believe in adhering to specific core principles to ensure the
+              quality and success of the projects. These principles reflect my
+              commitment to delivering exceptional results and creating
+              meaningful experiences for users and the company.
             </div>
           </div>
           <div class="features__elements-wrapper">
             <div class="features__element">
               <div class="features__image features__image--mobile">&nbsp;</div>
               <div class="features__text">
-                <div class="features__title">
-                  Responsive and Mobile Friendly
-                </div>
+                <div class="features__title">User-Centric Approach</div>
                 <div class="features__description">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Accusamus ducimus, nemo corrupti voluptas ea! Placeat quidem
-                  magnam.
+                  I prioritize a user-centric approach in my development
+                  process, focusing on delivering responsive and mobile-friendly
+                  applications that offer seamless experiences across devices.
                 </div>
               </div>
             </div>
             <div class="features__element">
               <div class="features__image features__image--newest">&nbsp;</div>
               <div class="features__text">
-                <div class="features__title">
-                  Made with best suited Technologies
-                </div>
+                <div class="features__title">Cutting-Edge Technologies</div>
                 <div class="features__description">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  I stay up-to-date with the latest technologies and tools,
+                  ensuring that each project is built with the most suitable and
+                  advanced technologies to maximize its potential.
                 </div>
               </div>
             </div>
@@ -725,12 +726,12 @@
                 &nbsp;
               </div>
               <div class="features__text">
-                <div class="features__title">
-                  Visually Attractive and Intuitive
-                </div>
+                <div class="features__title">Accessibility and Inclusivity</div>
                 <div class="features__description">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Accusamus ducimus, nemo corrupti voluptas ea.
+                  I am dedicated to creating visually attractive and intuitive
+                  designs that prioritize accessibility and inclusivity, making
+                  sure that all users can interact with the applications
+                  comfortably.
                 </div>
               </div>
             </div>
@@ -739,66 +740,55 @@
                 &nbsp;
               </div>
               <div class="features__text">
-                <div class="features__title">Compatible with Every Browser</div>
+                <div class="features__title">
+                  Rigorous Compatibility Testing
+                </div>
                 <div class="features__description">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Accusamus ducimus, nemo corrupti voluptas ea! Placeat quidem
-                  magnam, natus est eos fugit doloremque dolorum.
+                  To guarantee widespread accessibility, I thoroughly test my
+                  projects across various browsers, ensuring compatibility with
+                  every major browser.
                 </div>
               </div>
             </div>
-            <!-- <div class="features__element">
+            <div class="features__element">
               <div class="features__image features__image--clients">&nbsp;</div>
               <div class="features__text">
-                <div class="features__title">Unique for Every Client</div>
+                <div class="features__title">Performance Optimization</div>
                 <div class="features__description">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Accusamus ducimus, nemo corrupti voluptas ea! Placeat quidem
-                  magnam.
+                  I prioritize performance optimization to deliver fast and
+                  performant applications, resulting in enhanced user
+                  satisfaction and improved loading times.
                 </div>
               </div>
-            </div> -->
+            </div>
             <div class="features__element">
               <div class="features__image features__image--fast">&nbsp;</div>
               <div class="features__text">
-                <div class="features__title">Fast and Performant</div>
+                <div class="features__title">SEO-Friendly Design</div>
                 <div class="features__description">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Accusamus ducimus, nemo corrupti voluptas ea placeat quidem.
+                  I optimize projects for search engines, utilizing best
+                  practices to enhance visibility and reach a wider audience.
                 </div>
               </div>
             </div>
             <div class="features__element">
               <div class="features__image features__image--seo">&nbsp;</div>
               <div class="features__text">
-                <div class="features__title">Search Engine Friendly</div>
+                <div class="features__title">Robust Security Measures</div>
                 <div class="features__description">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Accusamus ducimus, nemo corrupti.
+                  I implement stringent security measures to safeguard users'
+                  data and protect the applications against potential threats.
                 </div>
               </div>
             </div>
             <div class="features__element">
               <div class="features__image features__image--secure">&nbsp;</div>
               <div class="features__text">
-                <div class="features__title">Secure</div>
+                <div class="features__title">Continuous Improvement</div>
                 <div class="features__description">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Accusamus ducimus, nemo corrupti voluptas ea! Placeat quidem
-                  magnam, natus.
-                </div>
-              </div>
-            </div>
-            <div class="features__element">
-              <div class="features__image features__image--semantic">
-                &nbsp;
-              </div>
-              <div class="features__text">
-                <div class="features__title">Semantic</div>
-                <div class="features__description">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Accusamus ducimus, nemo corrupti voluptas ea! Placeat quidem
-                  magnam, natus est eos fugit doloremque.
+                  I believe in continuous improvement, regularly seeking
+                  feedback and making iterative enhancements to deliver the best
+                  possible solutions.
                 </div>
               </div>
             </div>
