--- a/index.html
+++ b/index.html
@@ -9,110 +9,7 @@
     <!-- Site informations -->
     <title>Shreya Agarwal</title>
     <meta name="author" content="Shreya Agarwal" />
-    <meta
-      name="description"
-      content="Free HTML5 Template created by Dominik Serafin."
-    />
-
-    <!-- Open Graph -->
-
-    <!-- Twitter Card -->
-    <!--
-	<meta name="twitter:title" content="">
-	<meta name="twitter:description" content="">
-	<meta name="twitter:domain" content="">
-	<meta name="twitter:image:src" content="">
-	<meta name="twitter:site" content="">
-	<meta name="twitter:creator" content="">
-	<meta name="twitter:card" content="">
-	-->
-
-    <!-- Favicon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="style/favicon/apple-touch-icon-180x180.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="style/favicon/apple-touch-icon-152x152.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="style/favicon/apple-touch-icon-144x144.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="style/favicon/apple-touch-icon-120x120.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="style/favicon/apple-touch-icon-114x114.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="57x57"
-      href="style/favicon/apple-touch-icon-57x57.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="style/favicon/apple-touch-icon-72x72.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="60x60"
-      href="style/favicon/apple-touch-icon-60x60.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="style/favicon/apple-touch-icon-76x76.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="style/favicon/favicon-192x192.png"
-      sizes="192x192"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="style/favicon/favicon-160x160.png"
-      sizes="160x160"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="style/favicon/favicon-96x96.png"
-      sizes="96x96"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="style/favicon/favicon-16x16.png"
-      sizes="16x16"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      href="style/favicon/favicon-32x32.png"
-      sizes="32x32"
-    />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta
-      name="msapplication-TileImage"
-      content="style/favicon/mstile-144x144.png"
-    />
-    <meta
-      name="msapplication-config"
-      content="style/favicon/browserconfig.xml"
-    />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <meta name="description" content="Portfolio website of Shreya Agarwal." />
 
     <!-- Fonts -->
     <link
